--- a/src/app/admin/components/setting/setting.component.html
+++ b/src/app/admin/components/setting/setting.component.html
@@ -1,28 +1,63 @@
 
-<mat-tab-group>
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">attach_money</mat-icon>
-      Parametre Monnaie
-    </ng-template>
-    Content 1
-  </mat-tab>
 
-  <mat-tab>
-    <ng-template mat-tab-label>
+<div class="card pt-3">
+  <div class="card-body">
+    <div *ngIf="isLoading" class="text-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+    <div style="width: 50%" class="d-flex justify-content-end align-items-center float-end p-4">
+      <button  (click)="openForm()" style="background-color: #1a1b29; color: white"     mat-raised-button> Ajouter un nouveau Taux</button>
+    </div>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
 
-      <mat-icon class="example-tab-icon">attach_money</mat-icon>
-      Autre Parametre
-    </ng-template>
-    Autre Parametre
-  </mat-tab>
 
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">thumb_up</mat-icon>
-      Autre Parametre
-    </ng-template>
 
-    Autre Parametre
-  </mat-tab>
-</mat-tab-group>
+        <!-- Rate Column -->
+        <ng-container matColumnDef="rate">
+          <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Taux du jour </th>
+          <td mat-cell *matCellDef="let element"> {{element.rate}} </td>
+        </ng-container>
+
+        <!-- CreatedAt Column -->
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Date de Creation </th>
+          <td mat-cell *matCellDef="let element"> {{element.createdAt | date: 'short'}} </td>
+        </ng-container>
+
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Status </th>
+          <td mat-cell *matCellDef="let element">
+
+            <span class=" text-{{element.status =='ACTIVE' ? 'success': 'primary'}}">
+                 {{element.status =='ACTIVE' ? 'TAUX ACTUEL ': element.status}}
+            </span>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Action </th>
+          <td mat-cell *matCellDef="let element">
+            <div class="d-flex gap-2">
+              <button [disabled]="element.status =='INACTIVE'" mat-raised-button   (click)="editRate(element)">
+                <i class="bi bi-pencil-fill " style="cursor: pointer"></i>
+              </button>
+
+
+            </div>
+          </td>
+        </ng-container>
+
+        <!-- Table Footer and Rows -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+
+    <!-- Pagination Controls -->
+    <mat-paginator [length]="dataSource.data.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]" showFirstLastButtons></mat-paginator>
+  </div>
+</div>
