--- a/src/app/admin/components/user/user.component.html
+++ b/src/app/admin/components/user/user.component.html
@@ -1,1 +1,95 @@
-<p>user works!</p>
+<div class="card">
+  <div class="card-body">
+    <div *ngIf="isLoading" class="text-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+    <ng-container *ngIf="dataSource.data.length > 0">
+      <div class="table-container" *ngIf="!isLoading">
+        <div class="d-flex justify-content-between align-items-center" >
+          <div class="w-100">
+            <mat-form-field appearance="fill" style="width: 50%">
+              <mat-label>Rechercher</mat-label>
+              <input matInput (keyup)="applyFilter($event)" >
+            </mat-form-field>
+          </div>
+          <div style="width: 50%" class="d-flex justify-content-end">
+            <button (click)="addNewUser()" style="background-color: #1a1b29; color: white"     mat-raised-button> Creer Nouveau Utilisateur</button>
+          </div>
+        </div>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <!-- ID Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Identifiant </th>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+          </ng-container>
+
+          <!-- Username Column -->
+          <ng-container matColumnDef="username">
+            <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Nom d'utilisateur </th>
+            <td mat-cell *matCellDef="let element">{{ element.username }}</td>
+          </ng-container>
+
+          <!-- Email Column -->
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Adresse Electronique </th>
+            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+          </ng-container>
+
+          <!-- Role Column -->
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Role </th>
+            <td mat-cell *matCellDef="let element">{{ element.role }}</td>
+          </ng-container>
+
+          <!-- Status Column -->
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Status </th>
+            <td mat-cell *matCellDef="let element">
+              <mat-slide-toggle
+                [(ngModel)]="element.status"
+                (change)="updateStatus(element)"
+                [checked]="element.status === 'ACTIVE'"
+                [disabled]="element.status !== 'ACTIVE'  "
+              >
+                {{ element.status   }}
+              </mat-slide-toggle>
+            </td>
+          </ng-container>
+
+          <!-- Action Column -->
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef style="background-color: #1a1b29; color: gray"> Actions </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button (click)="editUser(element)">
+                <mat-icon>edit</mat-icon>
+              </button>
+
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator
+          [length]="dataSource.data.length"
+          [pageSize]="5"
+          [pageSizeOptions]="[5, 10, 25]"
+          showFirstLastButtons
+        ></mat-paginator>
+
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="dataSource.data.length ==0 ">
+      <div class="d-flex justify-content-center align-items-center flex-column">
+
+        <h2 class="text-body">Pas de Data</h2>
+
+        <button (click)="addNewUser()" style="background-color: #1a1b29; color: white"     mat-raised-button> Creer Nouveau Utilisateur</button>
+
+      </div>
+    </ng-container>
+  </div>
+</div>
